--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <version>0.9.1</version>
         </dependency>
         <!--Auth-->
+
+        <!--https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java -->
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.7.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
