--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 #SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
+#Emails
+alkemy.icons.email.sender = trinhayane@gmail.com
+alkemy.icons.email.enabled = true
